--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL="mongodb://localhost:27017/chat"
+MONGO_URL="mongodb+srv://praveenkumar04:Praveen5847@student.zhnecge.mongodb.net/"
